清理冗余代码和导入